--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -17,7 +17,9 @@ h2 {
 }
 
 header {
-    background-color: rgba(20, 30, 13, 0.7);
+    background-color: rgba(44, 233, 138, 0.7);
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 footer {
@@ -26,15 +28,20 @@ footer {
     margin-top: 200px;
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
 nav a {
     text-align: center;
-    color: #ffffff;
+    color: #ddd0d0;
     text-decoration: none;
     padding: 35px;
 }
 
 nav a:hover {
-    background-color: black;
+    background-color: rgb(17, 146, 96);
     color: #d9c2a3;
 }
 
@@ -54,7 +61,7 @@ main section {
 .book,
 .join {
     background-color: #d9c2a3;
-    color: black;
+    color: rgb(233, 4, 4);
     text-decoration: none;
     font-size: 18px;
     padding: 15px 30px;
@@ -64,7 +71,7 @@ main section {
 
 .book:hover,
 .join:hover {
-    background-color: #000;
+    background-color: #f10a0a;
     color: #d9c2a3;
 }
 
@@ -84,7 +91,7 @@ main section {
 }
 
 .msg p {
-    color: #000;
+    color: #9e0101;
     font-size: 0.8em;
     padding-bottom: 15px;
 }
@@ -138,3 +145,125 @@ main section img {
 #hero-img {
     width: 100%;
 }
+
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+#hero-msg h4 {
+    color: rgb(25, 175, 75);
+}
+
+#hero-img {
+    width: 100%;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+    color: rgb(230, 64, 64)
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+.card-img, .mountains {
+    width: 100%;
+
+
+}
+
+footer {
+    background-color: #6f7364;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+         
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.msg {
+    background-color: #6f7364;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+             
