--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -78,12 +78,16 @@ main section {
 #background {
     height: 725px;
     background-color: #d9c2a3;
+    grid-column: 1/11;
+    grid-row:4/9
 }
 
 .msg {
     background-color: #ffffff;
     padding: 35px;
     line-height: 1.5em;
+    grid-column: 6/10;
+    grid-row: 6/7;
 }
 
 .msg h2 {
@@ -95,11 +99,31 @@ main section {
     font-size: 0.8em;
     padding-bottom: 15px;
 }
+.home-grid{
+    display:grid;
+    grid-template-columns: repeat(10, 1fr);
+
+}
 
 .rivers-card,
 .camping-card,
 .rapids-card {
     margin: 200px 0;
+    
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row:2/3;
+
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
 }
 
 footer p {
